Added terminal sorting buttons